# Kasperskiy_Server

./: CMakeLists.txt  log4cppConfig.cmake
Client_Sources/: Client.cpp
Server_srcs/: server.cpp
